// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Radio (checked) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  margin-left: 1rem;
}

.c3 {
  border-radius: 50%;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  color: #FFFFFF;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c3:after {
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_2"
    checked=""
    class="c1 c2"
    id="radio_1"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="radio_1"
  />
  <label
    class="c4"
    for="radio_1"
    id="checkBox_label_2"
  >
    Checked
  </label>
</div>
`;

exports[`render Radio (unchecked) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  margin-left: 1rem;
}

.c1:focus + .c5 {
  box-shadow: 0 0 0 4px #DBE3FE;
}

.c3 {
  border-radius: 50%;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  color: #FFFFFF;
  display: inline-block;
  height: 1.25rem;
  position: relative;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 4px #DBE3FE;
}

<div
  class="c0"
>
  <input
    aria-labelledby="checkBox_label_4"
    class="c1 c2"
    id="radio_3"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="radio_3"
  />
  <label
    class="c4"
    for="radio_3"
    id="checkBox_label_4"
  >
    Unchecked
  </label>
</div>
`;
